create table quotation (id uuid primary key,number varchar(40) not null unique,customer_id uuid not null references customer(id),project_id uuid not null references customer_project(id),rfq_id uuid references quote_request(id),sales_agent varchar(320) not null,expiry_date date,transport numeric(14,2) not null,payment_terms text,notes text,status varchar(20) not null,revision integer not null,subtotal numeric(14,2) not null,tax_total numeric(14,2) not null,grand_total numeric(14,2) not null,created_at timestamp with time zone not null);
create table quotation_item (id uuid primary key,quotation_id uuid not null references quotation(id) on delete cascade,material_name varchar(180) not null,variant_label varchar(220) not null,quantity_m2 numeric(14,3) not null,unit_price numeric(14,2) not null,discount_percent numeric(5,2) not null,tax_percent numeric(5,2) not null);
create index idx_quotation_rfq on quotation(rfq_id); create index idx_quotation_status on quotation(status);
